Add resources section in home page

--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 .home-parallax {
   /* The image used */
-  background-image: url("../img/handball.jpg");
+  background-image: url("../img/computer.jpg");
 
   /* Set a specific height */
   height: 500px;
